# tmscript_agent

./: .env.example  .gitignore  README.md  pyproject.toml  utli.py
backend/: main.py  schemas.py  voice.py
backend/db/: database.py  init_db.py  session_repository.py
backend/routers/: sessions.py
backend/services/: session_manager.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  styles.css
frontend/src/components/: AppLayout.tsx  ChatPanel.tsx  ScriptEditor.tsx  Sidebar.tsx  StatusCard.tsx  Workspace.tsx
frontend/src/types/: index.ts
