[project]
name = "0617"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.14.0",
    "ctranslate2>=4.8.0",
    "fastapi>=0.137.1",
    "faster-whisper>=1.2.1",
    "openai-agents>=0.17.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
